--- a/src/WithSara/withsara.css
+++ b/src/WithSara/withsara.css
@@ -95,7 +95,7 @@
     margin: 0;
     padding: 0;
     z-index: 0;
-    max-width:80vw;
+    max-width:calc(30vw + 30vh);
     width: auto;
     height: auto;
     z-index: 2;
